--- a/app/src/main/res/layout/permission_tip.xml
+++ b/app/src/main/res/layout/permission_tip.xml
@@ -18,7 +18,7 @@
 
         <TextView
             android:id="@+id/tipIntro"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:gravity="start|center"
             android:paddingTop="6dp"
